--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Foosball Matches</string>
-    <string name="menu_item_matches">Matches</string>
-    <string name="menu_item_ranking">Ranking</string>
-    <string name="menu_item_players">Players</string>
-    <string name="menu_item_settings">Settings</string>
+    <string name="menu_title_matches">Matches</string>
+    <string name="menu_title_ranking">Ranking</string>
+    <string name="menu_title_players">Players</string>
+    <string name="menu_title_settings">Settings</string>
 </resources>
