--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="menu_title_ranking">Ranking</string>
     <string name="menu_title_players">Players</string>
     <string name="menu_title_settings">Settings</string>
+    <string name="edit">Edit</string>
+    <string name="match_card_view_score">%d - %d</string>
+    <string name="match_details">Match Details</string>
 </resources>
