--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,17 @@
     <string name="menu_title_settings">Settings</string>
     <string name="edit">Edit</string>
     <string name="match_card_view_score">%d - %d</string>
+    <string name="match_details_players_view_item_text">%d - %s</string>
     <string name="match_details">Match Details</string>
+    <string name="match_details_title_date">Date</string>
+    <string name="match_details_title_time">Time</string>
+    <string name="match_details_title_player_1">Player 1</string>
+    <string name="match_details_title_player_1_score">Player 1 Score</string>
+    <string name="match_details_title_player_2_score">Player 2 Score</string>
+    <string name="match_details_title_player_2">Player 2</string>
+    <string name="button_submit">Submit</string>
+    <string name="activity_match_details_edit_date_hint">Select a date</string>
+    <string name="activity_match_details_edit_time_hint">Select a time</string>
+    <string name="activity_match_details_edit_player_hint">Select a player</string>
+    <string name="activity_match_details_edit_player_score_hint">Type Score</string>
 </resources>
