--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,11 +18,11 @@
     <string name="activity_match_details_edit_date_hint">Select a date</string>
     <string name="activity_match_details_edit_time_hint">Select a time</string>
     <string name="activity_match_details_edit_player_hint">Select a player</string>
-    <string name="activity_match_details_edit_player_score_hint">Type Score</string>
+    <string name="activity_match_details_edit_player_score_hint">Type score</string>
     <string name="activity_match_details_error_message_date">Date missing</string>
     <string name="activity_match_details_error_message_player">Player missing</string>
     <string name="activity_match_details_error_message_score">Score missing</string>
-    <string name="activity_match_details_error_message_generic">Something went wrong. Try again</string>
+    <string name="error_message_generic">Something went wrong. Try again</string>
     <string name="activity_match_details_error_message_score_tied">Scores cannot be tied. There should be a winner</string>
     <string name="activity_match_details_error_message_same_player">Same players are selected as both player 1 and player 2</string>
     <string name="fragment_ranking_header_rank">Rank</string>
@@ -38,4 +38,12 @@
     <string name="fragment_settings_clear_data_button">Clear</string>
     <string name="fragment_settings_populate_data_header">Populate sample data when database is empty</string>
     <string name="fragment_settings_populate_data_button">Populate</string>
+    <string name="player_details">Player Details</string>
+    <string name="activity_player_details_edit_id_header">Employee Id</string>
+    <string name="activity_player_details_edit_id_hint">Type employee id</string>
+    <string name="activity_player_details_edit_name_header">Name</string>
+    <string name="activity_player_details_edit_name_hint">Type name</string>
+    <string name="activity_player_details_error_message_id">Employee id missing</string>
+    <string name="activity_player_details_error_message_name">Name missing</string>
+    <string name="activity_player_details_error_message_duplicate_id">Duplicate Employee Id</string>
 </resources>
